# libds

./: CMakeLists.txt  Doxyfile  LICENSE  README.md
include/libds/: array.h  buffer.h  dict.h  hash.h  iter.h  libds.h  list.h
src/: array.c  buffer.c  dict.c  dictpriv.h  hash.c  iter.c  iterpriv.h  list.c  listpriv.h
test/: array_test.c  array_test.h  buffer_test.c  buffer_test.h  dict_test.c  dict_test.h  dslib_test.c  dslib_test.h  list_test.c  list_test.h  main_test.c
